Support Java 25